--- a/htmlCourse.html
+++ b/htmlCourse.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   
-  <title>Bootstrap Theme Company Page</title>
+  <title>Course Page | Client Side</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -45,6 +45,7 @@
 		</div>
 		<div class="col-md-8">
 		<br>
+		<h1 id = "heading"></h1>
 		<p id = "contentResult"></p>
 			<div class="pull-right">
 				<br>
