--- a/header.html
+++ b/header.html
@@ -8,15 +8,21 @@
         </button>
       <a class="navbar-brand" href="index.html">Client SIDE</a><!-- can also add an image-->
 		
+
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
+	  <li class="nav-item dropdown">
+			<i class="fa fa-sun-o" aria-hidden="true" style="color: yellow; padding-top: 10px;"></i>
+		
+		
         <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Courses</a></li>
+        <li><a href="#">out</a></li>
+        <li><a href="#">C</a></li>
         <li><a href="#">Quiz</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </div>
   </div>
 </nav>
+<script type = "text/javaScript" src = "weather.js"></script>
