--- a/htmlCourse.html
+++ b/htmlCourse.html
@@ -17,7 +17,7 @@
   
 </head>
 <body>
-	<div id = "header"></div>
+	<div id ="header"></div>
 	<!--<div id = "footer"></div>-->
 <div class= "mainCourse">
 	
@@ -49,7 +49,7 @@
 		<p id = "contentResult"></p>
 			<div class="pull-right">
 				<br>
-				<a class="push_button red" href="javascriptCourse.html">Next Course</a>
+				<a class="push_button red" href="allcourses.html">Next Course</a>
 			</div>
 		</div>
 	
